@@ -74,6 +74,7 @@
 
 
 typedef map < string, string > modDescMap;
+typedef map < string, string > bookAbrevMap;
 /***********************************************************************************************
  * Sword globals 
 ***********************************************************************************************/
@@ -106,7 +107,7 @@ SWModule
     *listMod;			/* module for ListEditor */
 
 modDescMap descriptionMap;
-
+bookAbrevMap abrevationMap;
 /***********************************************************************************************
  * GnomeSword globals
 ***********************************************************************************************/
